# wondertrader

./: .gitignore  Doxyfile  README.md
src/: CMakeCache.txt  CMakeLists.txt  Makefile  WonderTrader.sln  build_release.sh  cmake_install.cmake
src/CTPLoader/: CMakeLists.txt  CTPLoader.cpp  Makefile  TraderSpi.cpp  TraderSpi.h  cmake_install.cmake
src/CTPOptLoader/: CMakeLists.txt  Makefile  cmake_install.cmake
src/Common/: mdump.cpp  mdump.h
src/Includes/: FasterDefs.h  IBaseDataMgr.h  ICtaStraCtx.h  IDataReader.h  IHftStraCtx.h  IHotMgr.h  ISelStraCtx.h  WTSDataDef.hpp  WTSMarcos.h  WTSStruct.h  WTSVersion.h
src/LoaderRunner/: CMakeLists.txt  LoaderRunner.cpp  Makefile  cmake_install.cmake
src/ParserCTP/: CMakeLists.txt  Makefile  ParserCTP.cpp  ParserCTP.h  cmake_install.cmake
src/ParserCTPMini/: CMakeLists.txt  Makefile  cmake_install.cmake
src/ParserCTPOpt/: CMakeLists.txt  Makefile  cmake_install.cmake
src/ParserFemas/: CMakeLists.txt  Makefile  cmake_install.cmake
src/ParserOES/: CMakeLists.txt
src/ParserShm/: CMakeLists.txt  Makefile  cmake_install.cmake
src/ParserUDP/: CMakeLists.txt  Makefile  cmake_install.cmake
src/ParserXTP/: CMakeLists.txt  Makefile  cmake_install.cmake
src/ParserXeleSkt/: CMakeLists.txt  Makefile  cmake_install.cmake
src/ParserYD/: CMakeLists.txt
src/QuoteFactory/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/Share/: BoostFile.hpp  BoostMappingFile.hpp  BoostShm.hpp  CodeHelper.hpp  CpuHelper.hpp  DLLHelper.hpp  IniHelper.hpp  ModuleHelper.hpp  ObjectPool.hpp  SpinMutex.hpp  StdUtils.hpp  StrUtil.hpp  TimeUtils.hpp  WtKVCache.hpp  charconv.hpp  cppcli.hpp  decimal.h  fmtlib.h  threadpool.hpp
src/TestBtPorter/: CMakeLists.txt
src/TestDtPorter/: CMakeLists.txt
src/TestExecPorter/: CMakeLists.txt
src/TestParser/: CMakeLists.txt
src/TestPorter/: CMakeLists.txt
src/TestTrader/: CMakeLists.txt
src/TestUnits/: CMakeLists.txt
src/TraderATP/: CMakeLists.txt
src/TraderCTP/: CMakeLists.txt  Makefile  TraderCTP.cpp  TraderCTP.h  cmake_install.cmake
src/TraderCTPMini/: CMakeLists.txt  Makefile  cmake_install.cmake
src/TraderCTPOpt/: CMakeLists.txt  Makefile  cmake_install.cmake
src/TraderDD/: CMakeLists.txt
src/TraderDumper/: CMakeLists.txt  Makefile  cmake_install.cmake
src/TraderFemas/: CMakeLists.txt  Makefile  cmake_install.cmake
src/TraderMocker/: CMakeLists.txt  Makefile  cmake_install.cmake
src/TraderOES/: CMakeLists.txt
src/TraderXTP/: Makefile  cmake_install.cmake
src/TraderXTPXAlgo/: CMakeLists.txt
src/TraderYD/: CMakeLists.txt  Makefile  cmake_install.cmake
src/WTSTools/: CMakeLists.txt  CsvHelper.cpp  CsvHelper.h  Makefile  WTSBaseDataMgr.cpp  WTSBaseDataMgr.h  WTSDataFactory.cpp  WTSDataFactory.h  WTSHotMgr.cpp  WTSHotMgr.h  WTSLogger.cpp  WTSLogger.h  cmake_install.cmake
src/WTSUtils/: CMakeLists.txt  Makefile  SignalHook.hpp  WTSCfgLoader.cpp  WTSCfgLoader.h  WTSCmpHelper.hpp  WtLMDB.hpp  cmake_install.cmake
src/WtBtCore/: CMakeLists.txt  CtaMocker.cpp  CtaMocker.h  EventNotifier.cpp  EventNotifier.h  ExecMocker.cpp  ExecMocker.h  HftMocker.cpp  HftMocker.h  HisDataMgr.cpp  HisDataMgr.h  HisDataReplayer.cpp  HisDataReplayer.h  Makefile  MatchEngine.cpp  MatchEngine.h  SelMocker.cpp  SelMocker.h  UftMocker.cpp  UftMocker.h  WtHelper.cpp  WtHelper.h  cmake_install.cmake
src/WtBtPorter/: CMakeLists.txt  ExpCtaMocker.cpp  ExpCtaMocker.h  ExpHftMocker.cpp  ExpHftMocker.h  ExpSelMocker.cpp  ExpSelMocker.h  Makefile  PorterDefs.h  WtBtPorter.cpp  WtBtPorter.h  WtBtRunner.cpp  WtBtRunner.h  cmake_install.cmake
src/WtBtRunner/: CMakeLists.txt  Makefile  WtBtRunner.cpp  cmake_install.cmake
src/WtCore/: ActionPolicyMgr.cpp  ActionPolicyMgr.h  CMakeLists.txt  CtaStraBaseCtx.cpp  CtaStraBaseCtx.h  CtaStraContext.cpp  CtaStraContext.h  CtaStrategyMgr.cpp  CtaStrategyMgr.h  EventNotifier.cpp  EventNotifier.h  HftStraBaseCtx.cpp  HftStraBaseCtx.h  HftStraContext.cpp  HftStraContext.h  HftStrategyMgr.cpp  HftStrategyMgr.h  IExecCommand.h  ITrdNotifySink.h  Makefile  ParserAdapter.cpp  ParserAdapter.h  SelStraBaseCtx.cpp  SelStraBaseCtx.h  TraderAdapter.cpp  TraderAdapter.h  WtArbiExecuter.cpp  WtArbiExecuter.h  WtCtaEngine.cpp  WtCtaEngine.h  WtCtaTicker.cpp  WtCtaTicker.h  WtDiffExecuter.cpp  WtDiffExecuter.h  WtDistExecuter.cpp  WtDistExecuter.h  WtDtMgr.cpp  WtDtMgr.h  WtEngine.cpp  WtEngine.h  (+19 more)
src/WtCtaStraArbitrageStrategyFact/: CMakeLists.txt  WtCtaStraArbitrageStrategyFact.cpp  WtCtaStraArbitrageStrategyFact.vcxproj  WtCtaStraArbitrageStrategyFact.vcxproj.filters  WtStraArbitrageStrategy.cpp  WtStraArbitrageStrategy.h  my_adf.cp312-win_amd64.pyd  my_adf.h
src/WtCtaStraDualThrustFact/: CMakeLists.txt  WtCtaStraDualThrustFact.cpp  WtCtaStraDualTrustFact.vcxproj  WtCtaStraDualTrustFact.vcxproj.filters  WtStraDualThrust.cpp
src/WtCtaStraFact/: CMakeLists.txt  Makefile  WtCtaStraFact.cpp  WtCtaStraFact.h  WtCtaStraFact.vcxproj  WtCtaStraFact.vcxproj.filters  WtStraDualThrust.cpp  WtStraDualThrust.h  WtStraTwoMaStrategy.cpp  WtStraTwoMaStrategy.h  cmake_install.cmake
src/WtCtaStraStatisticalArbitrageFact/: CMakeLists.txt  WtCtaStraStatisticalArbitrageFact.cpp  WtCtaStraStatisticalArbitrageFact.vcxproj  WtCtaStraStatisticalArbitrageFact.vcxproj.filters  WtStraStatisticalArbitrage.cpp  WtStraStatisticalArbitrage.h
src/WtCtaStraTwoMaFact/: CMakeLists.txt  WtCtaStraFact.cpp  WtStraTwoMaStrategy.cpp
src/WtCtaTwoMaFact/: CMakeLists.txt  Makefile  WtCtaTwoMaFact.cpp  WtStraTwoMa.cpp  WtStraTwoMa.h  cmake_install.cmake
src/WtDataStorage/: CMakeLists.txt  DataDefine.h  Makefile  WtBtDtReader.cpp  WtBtDtReader.h  WtDataReader.cpp  WtDataReader.h  WtDataWriter.cpp  WtDataWriter.h  WtRdmDtReader.cpp  WtRdmDtReader.h  cmake_install.cmake
src/WtDataStorageAD/: CMakeLists.txt  DataDefineAD.h  LMDBKeys.h  Makefile  WtBtDtReaderAD.cpp  WtBtDtReaderAD.h  WtDataReaderAD.cpp  WtDataReaderAD.h  WtDataWriterAD.cpp  WtDataWriterAD.h  WtRdmDtReaderAD.cpp  WtRdmDtReaderAD.h  cmake_install.cmake
src/WtDtCore/: CMakeLists.txt  Makefile  (+19 more)
tests/: CMakeLists.txt  init_googletest.cpp
(+13399 files in other folders)
